[gd_scene load_steps=9 format=3 uid="uid://5in2rwe8ga48"]

[ext_resource type="Script" uid="uid://diq861yjdbs8x" path="res://UI/main_menu.gd" id="1_uahxu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b37jj"]
bg_color = Color(0.629828, 0.356561, 0.168912, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8aown"]
bg_color = Color(0.977309, 0.854026, 0.781187, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uahxu"]
bg_color = Color(0.901137, 0.57835, 0.371331, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6syg"]
bg_color = Color(0.4396, 0.588776, 0.925097, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uahxu"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_b37jj"]
color = Color(0.0800621, 0.317778, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8aown"]
color = Color(0.0800621, 0.317778, 1, 1)
thickness = 6

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_uahxu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Page_Center" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Page_Center"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="ColorRect/Page_Center/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.31749, 0.31749, 0.31749, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.899132, 0.464507, 0.072286, 1)
theme_override_colors/icon_hover_color = Color(1, 0.840652, 0.704614, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.751927, 0.331542, 1)
theme_override_colors/icon_normal_color = Color(0.987738, 0.000768937, 0.000421433, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_b37jj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8aown")
theme_override_styles/normal = SubResource("StyleBoxFlat_uahxu")
text = "Play"

[node name="Settings" type="Button" parent="ColorRect/Page_Center/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_uahxu")
text = "Settings"

[node name="Quit" type="Button" parent="ColorRect/Page_Center/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_uahxu")
text = "Quit"

[node name="Panel" type="Panel" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_t6syg")

[node name="Label" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="Back" type="Button" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -65.0
offset_right = 22.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Label3" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -89.0
offset_right = -85.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Master"

[node name="Master" type="HSlider" parent="ColorRect/Panel"]
layout_mode = 0
offset_left = 75.0
offset_top = 147.0
offset_right = 449.0
offset_bottom = 163.0
theme_override_styles/slider = SubResource("StyleBoxLine_uahxu")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_b37jj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8aown")
value = 50.0

[node name="SFX" type="HSlider" parent="ColorRect/Panel"]
layout_mode = 0
offset_left = 75.0
offset_top = 222.0
offset_right = 449.0
offset_bottom = 238.0
theme_override_styles/slider = SubResource("StyleBoxLine_uahxu")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_b37jj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8aown")
value = 50.0

[node name="Label2" type="Label" parent="ColorRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -5.0
offset_right = -126.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "SFX"

[connection signal="pressed" from="ColorRect/Page_Center/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ColorRect/Panel/Back" to="." method="_on_back_pressed"]
